package br.unitins.model;

public class ItemCompra {
    private Long id;
    private Integer quantidade;
    private Double preco;

    
    public ItemCompra(ItemCompra itemCompra) {
        this.quantidade = itemCompra.quantidade;
        this.preco = itemCompra.preco;
    }
    public Long getId() {
        return id;
    }
    public void setId(Long id) {
        this.id = id;
    }
    public Integer getQuantidade() {
        return quantidade;
    }
    public void setQuantidade(Integer quantidade) {
        this.quantidade = quantidade;
    }
    public Double getPreco() {
        return preco;
    }
    public void setPreco(Double preco) {
        this.preco = preco;
    }

}
