@startuml UML

class Roupas{
    - id: long
    - tipoDeTercido: String
    - Cliente: Cliente
    - Tamanho: tamanho

    + GetSet()


}
class Cliente{
    -id: long
    - cpf: String
    - nome: String
    - localEntrega: LocalEntrega

    + GetSet()
}

class Endereco{
    - id: long
    - cep: String
    - enderecoCompleto: String
    - complemento: String
    - referencia: String

    + GetSet()
}
class ItemCompra {
    - id: Long
    - quantidade: Integer
    - preco: Double
    
    + GetSet()
}
class Compra {
    - id: Long
    - data: Date
    - totalCompra: Double
    
    + GetSet()
}
class Telefone {
    - id: Long
    - codigoArea: String
    - numero: String
    
    + GetSet()
}
enum Tamanho{
    + p:int
    + M:int
    + G:int
    + GG:int
 
    - Tamanho (Integer id , String label)
    + {static}ValueOf (Integer id)
    + Gets()

}
abstract produto{
    - modelo: String
    - marca: String
    - cor: String
    - quantidade: Integer
    - valor: Float
    
}
    produto <|-- Roupas

    Endereco "*" <--*"1" Cliente

    Cliente "*" --> "*" Roupas: listaDesejo

    Compra "1" *--> "*" ItemCompra
    Compra "*" --> "1" Cliente
    Compra "*"  --> "1" Endereco

    ItemCompra "*" --> "1" Roupas

    Cliente "1" *--> "1" Telefone: celular
    Cliente "1" *--> "1" Telefone: whatszap
    Roupas "*" *--> "1" Tamanho
@enduml
